--- a/package.json
+++ b/package.json
@@ -58,45 +58,45 @@
   "devDependencies": {
     "@commitlint/cli": "^19.2.2",
     "@commitlint/config-conventional": "^19.2.2",
-    "@eslint/eslintrc": "^3.0.0",
-    "@types/chai": "^5.0.1",
+    "@eslint/eslintrc": "^3.3.3",
+    "@types/chai": "^5.2.3",
     "@types/chai-as-promised": "^8.0.1",
     "@types/mocha": "^10.0.6",
-    "@types/node": "^20.17.22",
+    "@types/node": "^20.19.27",
     "@types/sinon": "^17.0.3",
     "@types/sinon-chai": "^4.0.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
-    "chai-as-promised": "^8.0.1",
+    "chai-as-promised": "^8.0.2",
     "cross-env": "^7.0.3",
     "eslint": "^8",
     "eslint-config-next": "^14.1.0",
-    "eslint-config-prettier": "^10.0.1",
+    "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-headers": "^1.2.1",
-    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-headers": "^1.3.3",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-no-loops": "^0.3.0",
-    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "globals": "^15.13.0",
     "grpc_tools_node_protoc_ts": "^5.3.3",
-    "grpc-tools": "^1.12.4",
+    "grpc-tools": "^1.13.1",
     "husky": "^9.0.11",
     "jsdoc-to-markdown": "^8.0.1",
     "lerna": "^9.0.3",
-    "mocha": "^11.0.2",
+    "mocha": "^11.7.5",
     "next": "^14.1.0",
-    "nodemon": "^3.1.9",
+    "nodemon": "^3.1.11",
     "nx": "^22.3.3",
-    "prettier": "^3.5.0",
-    "prisma": "^6.12.0",
+    "prettier": "^3.7.4",
+    "prisma": "^6.19.1",
     "protoc-gen-grpc-web": "^1.5.0",
     "protoc-gen-js": "^3.21.4-4",
-    "rimraf": "^6.0.1",
+    "rimraf": "^6.1.2",
     "sinon": "^19.0.2",
-    "sinon-chai": "^4.0.0",
-    "tsx": "^4.19.2"
+    "sinon-chai": "^4.0.1",
+    "tsx": "^4.21.0"
   },
   "repository": {
     "type": "git",
@@ -124,7 +124,8 @@
     "node": ">=20.11.1"
   },
   "dependencies": {
-    "@prisma/client": "^6.12.0"
+    "@prisma/client": "^6.19.1",
+    "xstate": "5.17.3"
   },
   "optionalDependencies": {
     "@rollup/rollup-linux-arm64-gnu": "^4.29.1",
